# esp32s3-TAS

./: CMakeLists.txt  build_log.txt  build_log_v2.txt  platformio.ini  sdkconfig.TAS
.agent/workflows/: commit.md  load.md
custom_variants/esp32s3box/: pins_arduino.h
esp-idf-examples/tas/: CMakeLists.txt  huge_app.csv  o  platformio.ini  sdkconfig.TAS  sdkconfig.defaults  sdkconfig.unit1  sdkconfig.unit2
esp-idf-examples/tas/components/: arduino
esp-idf-examples/tas/docs/: iperf.md  logic.md  progress.md
esp-idf-examples/tas/include/: lv_conf.h
esp-idf-examples/tas/main/: CMakeLists.txt  main.cpp  toe_iperf.cpp  utilities.h  w5500_base.cpp
examples/WIFIFastConn/: fastconn.ino
examples/eth2ap/: CMakeLists.txt  SPI_README.md  eth2ap.ino  iperf_usage_kr.md  lcd.md  socket_bridge.cpp  utilities.h
examples/eth2ap/docs/: lcd.md  performance  progress.md  shell.md  spi.md  test_sheet.md  todo.md
examples/tas/: LGFX_Config.hpp  tas.ino  toe_iperf_pc.py  utilities.h  w5500_base.h
examples/tas/docs/: hardware_reference.md  iperf.md  lcd-impl-plan.md  lcd.md  load.md  logic.md  perf_test_guide.md  progress.md  readme.md  shell.md  toe_iperf.md
include/: esp32_fix.h  lv_conf.h
lib/TFT_eSPI/: User_Setup_Select.h
lib/TFT_eSPI/Processors/: TFT_eSPI_ESP32_S3.h
src/: sdkconfig.TAS  sdkconfig.defaults
src/docs/: ST7789V.md  lcd-impl-plan.md  lcd.md  load.md  perf_test_guide.md  performance  readme.md
src/include/: lv_conf.h
src/main/: main.cpp  main.cpp.orig  main.cpp.rej  socket_bridge.h  toe_iperf.h  utilities.h
(+2 files in other folders)
